--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +22,16 @@
         android:theme="@style/Theme.OuFood"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.HomeActivity"
+            android:name=".Activity.EditAvatarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.EditNameUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.EditPhoneUserActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.BaseActivity"
@@ -24,6 +42,9 @@
         <activity
             android:name=".Activity.ForgotPasswordActivity"
             android:exported="false" />
+        <activity
+            android:name=".Activity.HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".Activity.SignInActivity"
             android:exported="true">
