--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -20,8 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OuFood"
-        tools:targetApi="31"
-        android:name=".MyApplication">
+        tools:targetApi="31">
+        <activity
+            android:name=".Activity.FoodDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.EditAvatarActivity"
             android:exported="false" />
