--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -21,7 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OuFood"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Activity.CartActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.SaleListActivity"
             android:exported="false" />
@@ -54,7 +57,7 @@
             android:exported="true" />
         <activity
             android:name=".Activity.SignInActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
