--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.OuFood"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.RatingFoodActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SearchActivity"
             android:exported="false" />
         <activity
