--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
         android:theme="@style/Theme.OuFood"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.SelectAddressActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.AddressActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.AddressListActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.RatingFoodActivity"
             android:exported="false" />
         <activity
@@ -82,9 +91,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCDhMt3VKGjLc0O337-xc9BCg8hy4YWjxs"/>
+            android:value="AIzaSyCDhMt3VKGjLc0O337-xc9BCg8hy4YWjxs" />
     </application>
 
 </manifest>
