--- a/OuFood/app/src/main/AndroidManifest.xml
+++ b/OuFood/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".Helper.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -85,6 +85,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCDhMt3VKGjLc0O337-xc9BCg8hy4YWjxs" />
+
+        <receiver android:name=".Helper.Notification" />
     </application>
 
 </manifest>
